# flutter_qnn_lib

./: .gitignore  .gitmodules  .metadata  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/arm64-v8a/: readme.txt
android/src/main/kotlin/com/hallo1/flutter_qnn_lib/: FlutterQnnLibPlugin.kt
assets/hexagon-libs/: readme.txt
example/: ffigen_image_loader.yaml  ffigen_tokenizers.yaml  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_qnn_apps/: MainActivity.kt
example/csrc/: CMakeLists.txt  image_loader.cpp  image_loader.h  tokenizers_c.cc  tokenizers_c.h
example/lib/: easter_egg_animation.dart  image_loader.dart  image_loader_bindings_generated.dart  main.dart  model_manager.dart  settings_manager.dart  settings_page.dart  tokenizers.dart  tokenizers_bindings_generated.dart
example/lib/database/: image_tag_database.dart  image_vector_database.dart
example/lib/pages/: home_page.dart  image_classification_page.dart  image_classification_search_page.dart  image_search_page.dart  image_vector_management_page.dart  tokenizer_page.dart  vision_index.dart
example/lib/services/: text_feature_extractor.dart  vision_feature_extractor.dart
example/lib/tasks/: image_vector_batch_indexer.dart
example/lib/utils/: image_processor.dart
example/lib/widgets/: model_manager_widget.dart
lib/: platform_utils.dart  qnn.dart  qnn_types.dart  qnn_wrapper_bindings_generated.dart
src/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp.hpp  qnn_wrapper.cpp  qnn_wrapper.h
src/Log/: Logger.cpp
src/Utils/: BuildId.hpp  DataUtil.cpp  IOTensor.cpp  IOTensor.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
